--- a/GenomeProt/bin/integration_module/integration_summary_report.Rmd
+++ b/GenomeProt/bin/integration_module/integration_summary_report.Rmd
@@ -13,16 +13,15 @@ params:
 
 ```{r setup, include=FALSE, warning=FALSE}
 library(ggplot2)
-library(DESeq2)
 library(gplots)
 library(dplyr)
 library(RColorBrewer)
 library(data.table)
+library(scales)
+
 options(scipen=999)
 
 df <- read.csv(paste0(params$directory, "/", params$file))
-
-#df <- fread("/Users/josieg/Documents/peptide_info.csv")
 
 bad_pep <- df %>% dplyr::filter(is.na(transcript_id))
 
@@ -276,7 +275,7 @@ knitr::kable(stats, format = "html", col.names=c(" ", ""))
 
 #### Peptides by mapping status
 
-```{r, eval=TRUE, echo=FALSE}
+```{r, eval=TRUE, echo=FALSE, message = FALSE, warning = FALSE}
 
 plot1 <- data.frame(
   metric = c("total", "gene-specific", "UMP"),
@@ -298,13 +297,48 @@ pepplot <- ggplot(plot1) +
 
 suppressWarnings(print(pepplot))
 
+
+```
+
+
+
+#### Number of UMPs per ORF (shown for >10 ORFs)
+
+```{r, eval=TRUE, echo=FALSE, message = FALSE, warning = FALSE}
+
+umps_per_protein <- df %>% 
+  dplyr::filter(orf_identified == TRUE) %>% 
+  group_by(PID) %>%
+  summarise(number_ump = length(unique(peptide))) %>% 
+  ungroup() %>% 
+  mutate(orf_type = case_when(
+    startsWith(PID, "ORF") ~ "unannotated",
+    TRUE ~ "annotated"
+  ))
+
+tallied <- umps_per_protein %>% 
+  group_by(orf_type, number_ump) %>% 
+  summarise(n = n()) %>% 
+  dplyr::filter(n>10)
+
+ump_per_protein_plot <- ggplot(tallied) +
+  geom_bar(aes(x=number_ump, y=n, fill=orf_type), position="stack", stat="identity") +
+  ylab("Number of ORFs") +
+  xlab("Number of UMPs per ORF") +
+  scale_x_continuous(breaks = pretty_breaks()) +
+  scale_y_continuous(breaks = pretty_breaks()) +
+  scale_fill_manual(values=c("unannotated" = "deepskyblue3", "annotated" = "darkgreen")) +
+  theme_bw()
+
+suppressWarnings(print(ump_per_protein_plot))
+
 ```
 
 
 
 #### Peptides by number of exons spanned
 
-```{r, eval=TRUE, echo=FALSE}
+```{r, eval=TRUE, echo=FALSE, message = FALSE, warning = FALSE}
 
 summary_df <- df %>% 
   group_by(peptide) %>% 
@@ -328,7 +362,7 @@ suppressWarnings(print(exons_plot))
 
 #### Unannotated ORFs (with UMPs) by localisation
 
-```{r, eval=TRUE, echo=FALSE}
+```{r, eval=TRUE, echo=FALSE, message = FALSE, warning = FALSE}
 
 summary_df <- df %>% group_by(peptide) %>% 
             dplyr::filter(length(unique(PID)) == 1) %>%
@@ -342,6 +376,7 @@ plot_orf_local <- ggplot(summary_df) +
   geom_bar(aes(x=localisation, y=total, fill=localisation), stat="identity") +
   ylab("Total") +
   xlab("ORF localisation") +
+  scale_fill_brewer(palette = "Dark2") +
   theme_bw() +
   theme(legend.position = "none")
 
@@ -351,21 +386,22 @@ suppressWarnings(print(plot_orf_local))
 
 
 
-#### Unannotated ORFs (with UMPs) by transcript biotype
+#### Unannotated ORFs (with UMPs) by simplified transcript biotype
 
-```{r, eval=TRUE, echo=FALSE}
+```{r, eval=TRUE, echo=FALSE, message = FALSE, warning = FALSE}
 
 summary_df <- df %>% group_by(PID, transcript_id) %>% dplyr::filter(orf_identified == TRUE) %>% 
             slice_head(n=1) %>% 
             ungroup() %>% 
             dplyr::filter(startsWith(PID, "ORF")) %>%
-            group_by(transcript_biotype) %>%
+            group_by(simplified_biotype) %>%
             summarise(total = n())
 
 plot_orf_biotype <- ggplot(summary_df) +
-  geom_bar(aes(x=transcript_biotype, y=total, fill=transcript_biotype), stat="identity") +
+  geom_bar(aes(x=simplified_biotype, y=total, fill=simplified_biotype), stat="identity") +
   ylab("Total") +
   xlab("Transcript biotype") +
+  scale_fill_brewer(palette = "Set3") +
   theme_bw() +
   theme(legend.position = "none", 
         axis.text.x = element_text(angle = -45, hjust = 0, vjust = 1))
@@ -378,30 +414,58 @@ suppressWarnings(print(plot_orf_biotype))
 
 #### Lengths of annotated and unannotated ORFs (with UMPs)
 
-```{r, eval=TRUE, echo=FALSE}
+```{r, eval=TRUE, echo=FALSE, message = FALSE, warning = FALSE}
 
 summary_df <- df %>% dplyr::filter(orf_identified == TRUE) %>% 
             group_by(PID) %>% slice_head(n=1) %>% ungroup()
 
-# plot_orf_lengths <- ggplot(summary_df) +
-#   geom_boxplot(aes(x=orf_type, y=protein_length, fill=orf_type), outlier.shape=NA) +
-#   ylab("Length") +
-#   xlab("ORF type") +
-#   theme_bw() +
-#   ylim(0,1000) +
-#   theme(legend.position = "none", 
-#         axis.text.x = element_text(angle = -45, hjust = 0, vjust = 1))
+min_orf_length <- min(as.numeric(df$protein_length), na.rm=T)
 
 plot_orf_lengths <- ggplot(summary_df) +
   geom_density(aes(x=protein_length, y=..scaled.., color=orf_type)) +
   ylab("Scaled density") +
-  xlab("ORF Length (0-1000 AA)") +
+  xlab(paste0("ORF Length (", min_orf_length, "-1000 AA)")) +
+  scale_color_manual(values = c("annotated" = "darkgreen", "unannotated" = "deepskyblue3")) +
   theme_bw() +
-  xlim(0,1000)
+  xlim(min_orf_length,1000)
 
 suppressWarnings(print(plot_orf_lengths))
 
 ```
+
+
+
+```{r, eval=TRUE, echo=FALSE, message = FALSE, warning = FALSE}
+
+# save all PDFs
+
+pdf(paste0(params$directory,"/report_images/peptides-by-mapping-status.pdf"), w=6, h=4)
+suppressWarnings(print(pepplot))
+invisible(dev.off())
+
+pdf(paste0(params$directory,"/report_images/umps-per-orf.pdf"), w=6, h=4)
+suppressWarnings(print(ump_per_protein_plot))
+invisible(dev.off())
+
+pdf(paste0(params$directory,"/report_images/exons-spanned-by-peptides.pdf"), w=6, h=4)
+suppressWarnings(print(exons_plot))
+invisible(dev.off())
+
+pdf(paste0(params$directory,"/report_images/unannotated-orf-localisations.pdf"), w=6, h=4)
+suppressWarnings(print(plot_orf_local))
+invisible(dev.off())
+
+pdf(paste0(params$directory,"/report_images/unannotated-orf-tx-biotypes.pdf"), w=6, h=4)
+suppressWarnings(print(plot_orf_biotype))
+invisible(dev.off())
+
+pdf(paste0(params$directory,"/report_images/lengths-annotated-v-unannotated-orfs.pdf"), w=6, h=4)
+suppressWarnings(print(plot_orf_lengths))
+invisible(dev.off())
+
+```
+
+
 
 
 
